--- a/Eclipse files/King/src/main/webapp/index.html
+++ b/Eclipse files/King/src/main/webapp/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>king application</h1>
-	<form action="king">
+	<form action="king" method="get">
 		<pre>
 Name<input type="text" name="KingName" />
 Region<input type="text" name="region" />
